argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "gce"
    # Attach the Google-managed certificate
    networking.gke.io/managed-certificates: "argocd-google-cert"
    # Force HTTP to automatically redirect to HTTPS
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: argocd.visionary.work.gd
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
